--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1086,5 +1086,17 @@
   "prompt_spamfilter_full_text" : {
     "message" : "Analyze the following email and determine if it is spam or not. Consider factors such as suspicious keywords, excessive promotional language, misleading subject lines, requests for personal information, and unusual sender addresses.\nProvide a value from 0 (not spam) to 100 (spam) and an explaination of no more than 10 words.\nGenerate a response in JSON format only. Do not include any additional text or explanation; provide only the JSON. Here is the format to be used:\n{\n\"spamValue\": <integer from 0 to 100>,\n\"explanation\": \"Brief explanation of your reasoning\",\n}\nHere there are the mail information:\nSender: \"{%author%}\"\nSubject: \"{%mail_subject%}\"\nHtml body: \"{%mail_html_body%}\"",
     "description" : ""
+  },
+  "SpamFilter_prompt_prefs_title": {
+    "message": "Spam Filter Options",
+    "description": ""
+  },
+  "prefs_OptionText_spamfilter_threshold": {
+    "message": "Spam threshold",
+    "description": ""
+  },
+  "prefs_OptionText_spamfilter_threshold_Info": {
+    "message": "If the value returned by the AI is above this threshold, the email will be moved to the spam folder.",
+    "description": ""
   }
 }
