mail_folder_name and mail_folder_path palcehodlers added. fixes #253

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -611,6 +611,14 @@
     "message": "Mail subject",
     "description": ""
   },
+  "placeholder_folder_name": {
+    "message": "Folder name",
+    "description": ""
+  },
+  "placeholder_folder_path": {
+    "message": "Folder path",
+    "description": ""
+  },
   "placeholder_selected_text": {
     "message": "Selected text",
     "description": ""
