Update survey feedback message for clarity

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -884,7 +884,7 @@
     "description": ""
   },
   "prefs_SurveyLinkText": {
-    "message": "Share your feedback and help us improve ThunderAI!",
+    "message": "Share your feedback and help improve ThunderAI!",
     "description": ""
   },
   "prefs_SurveyLinkText2": {
