Rename context menu entry for spam filter to improve clarity

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1171,7 +1171,7 @@
     "message": "Add tags",
     "description": ""
   },
-  "context_menu_spamfilter": {
+  "context_menu_mzta-spamfilter": {
     "message": "Analyze for spam",
     "description": ""
   },
