Add diff viewer functionality and related UI elements. work in progress. see #109

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1214,5 +1214,9 @@
   "noActiveCalendar": {
     "message": "No active calendar found!",
     "description": ""
+  },
+  "btn_show_differences": {
+    "message": "Show differences",
+    "description": ""
   }
 }
