--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1218,5 +1218,9 @@
   "btn_show_differences": {
     "message": "Show differences",
     "description": ""
+  },
+  "chatgpt_win_diff_title": {
+    "message": "Differences between the original and the modified text",
+    "description": ""
   }
 }
