--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Use ChatGPT, Goolge Gemini or Ollama to enhance you emails!",
+    "message": "Use ChatGPT, Goolge Gemini or Ollama to enhance your emails!",
     "description": "Description of the extension."
   },
   "menu_title": {
