update message for chat window dimensions in English locale

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -280,7 +280,7 @@
     "description": ""
   },
   "prefs_OptionText_chatgpt_win_text": {
-    "message": "ChatGPT window dimensions",
+    "message": "AI chat window dimensions",
     "description": ""
   },
   "prefs_OptionText_chatgpt_win_height": {
