fix: correct capitalization in Hyprland warning message

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1248,7 +1248,7 @@
     "description": ""
   },
   "hyprland_warning": {
-    "message": "Set height and width to 0 if you're using hyprland!",
+    "message": "Set height and width to 0 if you're using Hyprland!",
     "description": ""
   }
 }
